generate stats.json conditions and fixed bar overflow

--- a/app/render/src/stylesheets/style.css
+++ b/app/render/src/stylesheets/style.css
@@ -52,7 +52,7 @@ nav {
 	display: grid;
 	grid-row: 1;
 	grid-gap: 1em;
-	z-index: 5;
+	z-index: 7;
 	width: 100%;
 	height: 5em;
 	background: #1D3557;
@@ -387,6 +387,7 @@ ul.control-menu li:hover {
 	font-family: 'Roboto', sans-serif;
 	flex-direction: row;
 	justify-content: center;
+	overflow: hidden;
 }
 
 .bundle-version-div {
